--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
         <title>Login Page</title>
     </head>
     <body>
+        <ul>
+            <li><a href="./index.html"></a>Home</li>
+            <li><a href="./script.html"></a>Div</li>
+            <li><a href="./textarea.html"></a>Textarea</li>
+        </ul>
         <div class="container">
             <div class="login-container">
                 <h2 class="text-center mb-4">Login</h2>
