--- a/index.html
+++ b/index.html
@@ -15,10 +15,21 @@
         <title>Login Page</title>
     </head>
     <body>
+          <style>
+        body{
+          background: rgb(72, 242, 199);
+        }
+        ul{
+            display: flex;
+            gap: 30px;
+            margin: 20px;
+            list-style-type: none;
+        }
+      </style>
         <ul>
-            <li><a href="./index.html"></a>Home</li>
-            <li><a href="./script.html"></a>Div</li>
-            <li><a href="./textarea.html"></a>Textarea</li>
+            <li><a href="./index.html">Home</a></li>
+            <li><a href="./script.html">div</a></li>
+            <li><a href="./textarea.html">Textarea</a></li>
         </ul>
         <div class="container">
             <div class="login-container">
