--- a/textarea.html
+++ b/textarea.html
@@ -33,10 +33,12 @@
         <div class="container mt-4">
             <div class="form-group">
                 <label for="area" class="fw-500 small">Textarea</label>
+                <!-- <input type="text" placeholder="Enter text" class="form-control my-3 input"> -->
                 <textarea
                     class="form-control mb-4"
                     id="area"
-                    rows="3"></textarea>
+                    rows="3">
+                </textarea>
                 <small id="wordCount" class="form-text text-muted small"
                     >0 words</small
                 >
