--- a/input-area.html
+++ b/input-area.html
@@ -13,7 +13,7 @@
     max-width: 800px;
     margin: auto;
   }
-  #result{
+  #result, #result2{
     padding: 20px 10px;
     border-radius: 5px;
     width: 100%;
@@ -38,6 +38,7 @@
 
     <button class="btn btn-primary my-2 mt-2">Task 3</button>
       <input type="text" id="text" class="form-control my-3">
+      <div id="result2" class="mt-3"></div>
   </div>
 </div>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
