--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
             <li><a href="./index.html">Home</a></li>
             <li><a href="./script.html">div</a></li>
             <li><a href="./textarea.html">Textarea</a></li>
+            <li><a href="./input-area.html">Input-Area</a></li>
         </ul>
         <div class="container">
             <div class="login-container">
