--- a/index.html
+++ b/index.html
@@ -102,25 +102,7 @@
                 </div>
             </div>
             <div class="table-container container">
-                <div class="row mt-4">
-                    <div class="col-lg-8">
-                        <div class="table-responsive">
-                            <table class="table table-bordered">
-                                <thead class="thead-dark ">
-                                    <tr>
-                                        <th scope="col">T/R</th>
-                                        <th scope="col">Name</th>
-                                        <th scope="col">Age</th>
-                                        <th scope="col">Phone</th>
-                                        <th scope="col">Address</th>
-                                    </tr>
-                                </thead>
-                                <tbody id="tbody">
-                                </tbody>
-                            </table>
-                        </div>
-                    </div>
-                    <div class="col-lg-4">
+                  <div class="col-lg-6 mx-auto">    
                         <div class="card">
                             <div class="card-body">
                                 <form onsubmit="handleSubmit(event)" id="form">
@@ -155,6 +137,24 @@
                             </div>
                         </div>
                     </div>
+                <div class="row mt-4">
+                    <div class="col-lg-12">
+                        <div class="table-responsive">
+                            <table class="table table-bordered table-striped">
+                                <thead class="thead-dark ">
+                                    <tr>
+                                        <th scope="col">T/R</th>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Age</th>
+                                        <th scope="col">Phone</th>
+                                        <th scope="col">Address</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="tbody">
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>                  
                 </div>
             </div>
         </main>
