added new folder fetch users

--- a/index.html
+++ b/index.html
@@ -40,6 +40,9 @@
                                 <a class="nav-link" href="./index.html">Home</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="../Fetch user/">fetch users</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="./script.html">div</a>
                             </li>
                             <li class="nav-item">
