--- a/Fetch user/index.html
+++ b/Fetch user/index.html
@@ -13,7 +13,7 @@
 
     <div class="container">
         <div class="table-responsive">
-            <table class="table table-info table-responsive table-bordered table-striped table-hover border-primary">
+            <table class="table table-info table-bordered table-striped table-hover border-primary">
                 <thead>
                     <tr>
                         <th>T/R</th>
@@ -30,6 +30,7 @@
             </table>
         </div>
     </div>
+
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
 
