--- a/Fetch user/index.html
+++ b/Fetch user/index.html
@@ -9,9 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <h1>Fetch API</h1>
-
+    
     <div class="container">
+        <h1 class="text-center my-2">Fetch API</h1>
         <div class="table-responsive">
             <table class="table table-info table-bordered table-striped table-hover border-primary">
                 <thead>
